Doc/force-app/main/default/objects/Budget_Tracking__c/Budget_Tracking__c.object-meta.xml
<CustomObject>
    <label>Budget Tracking</label>
    <nameField>
        <displayFormat>BT-{0000000}</displayFormat>
        <label>Budget Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>