Doc/force-app/main/default/objects/Budget_Tracking__c/fields/Hours_Remaining_B__c.field-meta.xml
<CustomField>
    <fullName>Hours_Remaining_B__c</fullName>
    <formula>Contract_Hours_B__c-Actual_Hours_B__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Remaining (B)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>