Doc/force-app/main/default/objects/Budget_Tracking__c/fields/ICR_Hours__c.field-meta.xml
<CustomField>
    <fullName>ICR_Hours__c</fullName>
    <label>Legacy ICR Hours (NB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>